--- a/index.html
+++ b/index.html
@@ -85,6 +85,32 @@
             bottom: 0;
             width: 100%;
         }
+
+        .choice-container {
+            max-width: 400px;
+            margin: 100px auto;
+            padding: 20px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .choice-container button {
+            width: 100%;
+            margin-bottom: 20px;
+            background-color: #2575fc;
+            color: white;
+            border: none;
+            padding: 10px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .choice-container button:hover {
+            background-color: #1a60d4;
+        }
+
     </style>
 </head>
 <body>
@@ -93,6 +119,7 @@
         Постановка сказки о мёртвой царевне<br>Школа, 4-Н класс
     </header>
 
+    <!-- Основной контент -->
     <div class="content" id="main-content">
         <div class="section">
             <h2>О сказке</h2>
@@ -107,6 +134,14 @@
         </div>
     </div>
 
+    <!-- Выбор между регистрацией и входом -->
+    <div id="choice-container" class="choice-container">
+        <h2>Добро пожаловать!</h2>
+        <button onclick="showRegister()">Зарегистрироваться</button>
+        <button onclick="showLogin()">Войти</button>
+    </div>
+
+    <!-- Форма регистрации -->
     <div id="registration-form" class="form-container">
         <h2>Регистрация</h2>
         <div class="error" id="registration-error">Пожалуйста, заполните все поля!</div>
@@ -115,6 +150,7 @@
         <button onclick="register()">Зарегистрироваться</button>
     </div>
 
+    <!-- Форма входа -->
     <div id="login-form" class="form-container">
         <h2>Вход</h2>
         <div class="error" id="login-error">Неправильное имя пользователя или пароль!</div>
@@ -123,6 +159,7 @@
         <button onclick="login()">Войти</button>
     </div>
 
+    <!-- Приветственное сообщение -->
     <div id="welcome-message" class="form-container">
         <h2>Добро пожаловать, <span id="username-display"></span>!</h2>
         <button onclick="logout()">Выйти</button>
@@ -176,25 +213,23 @@
         // Функция выхода
         function logout() {
             document.getElementById('welcome-message').style.display = 'none';
-            showLoginForm();
+            showChoice();
             document.getElementById('main-content').style.display = 'none';
         }
 
-        // Показ формы входа
-        function showLoginForm() {
+        // Показ выбора между регистрацией и входом
+        function showChoice() {
+            document.getElementById('choice-container').style.display = 'block';
             document.getElementById('registration-form').style.display = 'none';
-            document.getElementById('login-form').style.display = 'block';
+            document.getElementById('login-form').style.display = 'none';
         }
 
-        // Проверка, если пользователь уже зарегистрирован
-        window.onload = function() {
-            const storedUsername = localStorage.getItem('username');
-            if (storedUsername) {
-                showLoginForm();
-            } else {
-                document.getElementById('registration-form').style.display = 'block';
-            }
-        };
-    </script>
-</body>
-</html>
+        // Показ формы регистрации
+        function showRegister() {
+            document.getElementById('choice-container').style.display = 'none';
+            document.getElementById('registration-form').style.display = 'block';
+        }
+
+        // Показ формы входа
+        function showLogin() {
+            document.getElementById('choice-container
